--- a/README.Rmd
+++ b/README.Rmd
@@ -75,7 +75,8 @@ some features of `mvgam` which specifically rely on certain packages. The most i
 We can explore the package’s primary functions using a dataset that is available with all `R` installations. Load the `lynx` data and plot the series as well as its autocorrelation function
 ```{r include = FALSE}
 library(mvgam)
-library(ggplot2); theme_set(theme_bw())
+library(ggplot2)
+theme_set(theme_bw())
 ```
 
 ```{r echo = FALSE}
@@ -84,27 +85,34 @@ library(mvgam)
 
 ```{r, fig.alt = "Visualizing the lynx time series in R"}
 data(lynx)
-lynx_full <- data.frame(year = 1821:1934, 
-                        population = as.numeric(lynx))
-plot(lynx_full$population, type = 'l', ylab = 'Lynx trappings',
-     xlab = 'Time', bty = 'l', lwd = 2)
-box(bty = 'l', lwd  = 2)
-acf(lynx_full$population, main = '', bty = 'l', lwd = 2,
-    ci.col = 'darkred')
-box(bty = 'l', lwd  = 2)
+lynx_full <- data.frame(
+  year = 1821:1934,
+  population = as.numeric(lynx)
+)
+plot(lynx_full$population,
+  type = "l", ylab = "Lynx trappings",
+  xlab = "Time", bty = "l", lwd = 2
+)
+box(bty = "l", lwd = 2)
+acf(lynx_full$population,
+  main = "", bty = "l", lwd = 2,
+  ci.col = "darkred"
+)
+box(bty = "l", lwd = 2)
 ```
 
 Along with serial autocorrelation, there is a clear ~19-year cyclic pattern. Create a `season` term that can be used to model this effect and give a better representation of the data generating process than we would likely get with a linear model
 ```{r, fig.alt = "Visualizing and decomposing the lynx time series in R"}
-plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'),
-     lwd = 2, col.range = 'darkred')
-lynx_full$season <- (lynx_full$year%%19) + 1
+plot(stl(ts(lynx_full$population, frequency = 19), s.window = "periodic"),
+  lwd = 2, col.range = "darkred"
+)
+lynx_full$season <- (lynx_full$year %% 19) + 1
 ```
 
 For most `mvgam` models, we need an indicator of the series name as a `factor`. A `time` column is also needed for most models to index time (but note that these variables are not necessarily needed for other models supported by `mvgam`, such as [Joint Species Distribution Models](https://nicholasjclark.github.io/mvgam/reference/jsdgam.html))
 ```{r}
 lynx_full$time <- 1:NROW(lynx_full)
-lynx_full$series <- factor('series1')
+lynx_full$series <- factor("series1")
 ```
 
 Split the data into training (first 50 years) and testing (next 10 years of data) to evaluate forecasts
@@ -115,28 +123,31 @@ lynx_test <- lynx_full[51:60, ]
 
 Inspect the series in a bit more detail using `mvgam`'s plotting utility
 ```{r, message=FALSE, warning=FALSE, fig.width=6.5, fig.height=6.5, dpi=160, fig.alt = "Plotting time series features with the mvgam R package"}
-plot_mvgam_series(data = lynx_train, y = 'population')
+plot_mvgam_series(data = lynx_train, y = "population")
 ```
 
 Formulate an `mvgam` model; this model fits a GAM in which a cyclic smooth function for `season` is estimated jointly with a full time series model for the temporal process (in this case an `AR1` process). We assume the outcome follows a Poisson distribution and will condition the model in `Stan` using MCMC sampling with the `Cmdstan` interface:
 ```{r, include=FALSE}
-lynx_mvgam <- mvgam(data = lynx_train,
-               newdata = lynx_test,
-               formula = population ~ s(season, bs = 'cc', k = 12),
-               knots = list(season = c(0.5, 19.5)),
-               family = poisson(),
-               trend_model = AR(p = 1),
-               noncentred = TRUE)
+lynx_mvgam <- mvgam(
+  data = lynx_train,
+  newdata = lynx_test,
+  formula = population ~ s(season, bs = "cc", k = 12),
+  knots = list(season = c(0.5, 19.5)),
+  family = poisson(),
+  trend_model = AR(p = 1),
+  noncentred = TRUE
+)
 ```
 
 ```{r, eval=FALSE}
-lynx_mvgam <- mvgam(population ~ s(season, bs = 'cc', k = 12),
-                    knots = list(season = c(0.5, 19.5)),
-                    data = lynx_train,
-                    newdata = lynx_test,
-                    family = poisson(),
-                    trend_model = AR(p = 1),
-                    backend = 'cmdstanr')
+lynx_mvgam <- mvgam(population ~ s(season, bs = "cc", k = 12),
+  knots = list(season = c(0.5, 19.5)),
+  data = lynx_train,
+  newdata = lynx_test,
+  family = poisson(),
+  trend_model = AR(p = 1),
+  backend = "cmdstanr"
+)
 ```
 
 Have a look at this model's summary to see what is being estimated. Note that no pathological behaviours have been detected and we achieve good effective sample sizes / mixing for all parameters
@@ -146,12 +157,12 @@ summary(lynx_mvgam)
 
 As with any MCMC software, we can inspect traceplots. Here for the GAM smoothing parameters, using `mvgam`'s reliance on the excellent `bayesplot` library:
 ```{r, fig.alt = "Smoothing parameter posterior distributions estimated with Stan in mvgam"}
-mcmc_plot(lynx_mvgam, variable = 'rho', regex = TRUE, type = 'trace')
+mcmc_plot(lynx_mvgam, variable = "rho", regex = TRUE, type = "trace")
 ```
 
 and for the latent trend parameters
 ```{r, fig.alt = "Dynamic temporal autocorrelation parameters estimated with Stan in mvgam"}
-mcmc_plot(lynx_mvgam, variable = 'trend_params', regex = TRUE, type = 'trace')
+mcmc_plot(lynx_mvgam, variable = "trend_params", regex = TRUE, type = "trace")
 ```
 
 Use posterior predictive checks, which capitalize on the extensive functionality of the `bayesplot` package, to see if the model can simulate data that looks realistic and unbiased. First, examine histograms for posterior retrodictions (`yhat`) and compare to the histogram of the observations (`y`)
@@ -171,14 +182,16 @@ ppc(lynx_mvgam, type = "rootogram", n_bins = 25)
 
 All plots indicate the model is well calibrated against the training data. Inspect the estimated cyclic smooth, which is shown as a ribbon plot of posterior empirical quantiles. We can also overlay posterior quantiles of partial residuals (shown in red), which represent the leftover variation that the model expects would remain if this smooth term was dropped but all other parameters remained unchanged. A strong pattern in the partial residuals suggests there would be strong patterns left unexplained in the model *if* we were to drop this term, giving us further confidence that this function is important in the model
 ```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150, fig.alt = "Plotting GAM smooth functions in mvgam and R"}
-plot(lynx_mvgam, type = 'smooths', residuals = TRUE)
+plot(lynx_mvgam, type = "smooths", residuals = TRUE)
 ```
 
 First derivatives of smooths can be plotted to inspect how the slope of the function changes. To plot these we use the more flexible `plot_mvgam_smooth()` function
 ```{r, fig.alt = "Plotting GAM smooth functions in mvgam and R"}
-plot_mvgam_smooth(lynx_mvgam, series = 1, 
-                  smooth = 'season', 
-                  derivatives = TRUE)
+plot_mvgam_smooth(lynx_mvgam,
+  series = 1,
+  smooth = "season",
+  derivatives = TRUE
+)
 ```
 
 If you have the `gratia` package installed, it can also be used to plot partial effects of smooths on the link scale
@@ -189,7 +202,7 @@ draw(lynx_mvgam)
 
 As for many types of regression models, it is often more useful to plot model effects on the outcome scale. `mvgam` has support for the wonderful `marginaleffects` package, allowing a wide variety of posterior contrasts, averages, conditional and marginal predictions to be calculated and plotted. Below is the conditional effect of season plotted on the outcome scale, for example:
 ```{r, fig.alt = "Using marginaleffects and mvgam to plot GAM smooth functions in R"}
-plot_predictions(lynx_mvgam, condition = 'season', points = 0.5) +
+plot_predictions(lynx_mvgam, condition = "season", points = 0.5) +
   theme_classic()
 ```
 
@@ -201,38 +214,44 @@ plot(fc)
 
 And the estimated latent trend component
 ```{r, fig.alt = "Plotting dynamic trend components using mvgam in R"}
-trend_fc <- forecast(lynx_mvgam, newdata = lynx_test, type = 'trend')
+trend_fc <- forecast(lynx_mvgam, newdata = lynx_test, type = "trend")
 plot(trend_fc)
 ```
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589){target="_blank"}. We can estimate relative contributions to forecast uncertainty for the GAM component and the latent trend component using `mvgam`
 ```{r, fig.alt = "Decomposing uncertainty contributions to forecasts in mvgam in R"}
-plot_mvgam_uncertainty(lynx_mvgam, newdata = lynx_test, legend_position = 'none')
-text(1, 0.2, cex = 1.5, label = "GAM component", 
-     pos = 4, col = "white", family = 'serif')
-text(1, 0.8, cex = 1.5, label = "Trend component", 
-     pos = 4, col = "#7C0000", family = 'serif')
+plot_mvgam_uncertainty(lynx_mvgam, newdata = lynx_test, legend_position = "none")
+text(1, 0.2,
+  cex = 1.5, label = "GAM component",
+  pos = 4, col = "white", family = "serif"
+)
+text(1, 0.8,
+  cex = 1.5, label = "Trend component",
+  pos = 4, col = "#7C0000", family = "serif"
+)
 ```
 
 Both components contribute to forecast uncertainty. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior distributions of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR1 model is appropriate for the latent trend
 ```{r, fig.width=6.5, fig.height=6.5, dpi=160, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
-plot(lynx_mvgam, type = 'residuals')
+plot(lynx_mvgam, type = "residuals")
 ```
 
 `pp_check()` can also be used to further investigate these residuals. For example, we can plot them against `season` to look for any systematic patterns in the model's errors
 ```{r, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
-pp_check(lynx_mvgam, 
-         x = "season",
-         type = "resid_ribbon",
-         ndraws = 100)
+pp_check(lynx_mvgam,
+  x = "season",
+  type = "resid_ribbon",
+  ndraws = 100
+)
 ```
 
 Or we can also plot them against `time`
 ```{r, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
-pp_check(lynx_mvgam, 
-         x = "time",
-         type = "resid_ribbon",
-         ndraws = 100)
+pp_check(lynx_mvgam,
+  x = "time",
+  type = "resid_ribbon",
+  ndraws = 100
+)
 ```
 
 Use the `how_to_cite()` function to generate a scaffold for describing the model and sampling details in scientific communications
@@ -245,25 +264,27 @@ description
 ```
 
 ```{r, echo=FALSE}
-str_break = function(x, width = 90L) {
-  n = nchar(x)
-  if (n <= width) return(x)
-  n1 = seq(1L, n, by = width)
-  n2 = seq(width, n, by = width)
-  if (n %% width != 0) n2 = c(n2, n)
+str_break <- function(x, width = 90L) {
+  n <- nchar(x)
+  if (n <= width) {
+    return(x)
+  }
+  n1 <- seq(1L, n, by = width)
+  n2 <- seq(width, n, by = width)
+  if (n %% width != 0) n2 <- c(n2, n)
   substring(x, n1, n2)
 }
-cat('Methods text skeleton\n')
-cat(str_break(description$methods_text), sep = '\n')
+cat("Methods text skeleton\n")
+cat(str_break(description$methods_text), sep = "\n")
 ```
 
 ```{r echo=FALSE}
-cat('\nPrimary references\n')
-for(i in seq_along(description$citations)){
+cat("\nPrimary references\n")
+for (i in seq_along(description$citations)) {
   message(description$citations[[i]])
 }
-cat('\nOther useful references\n')
-for(i in seq_along(description$other_citations)){
+cat("\nOther useful references\n")
+for (i in seq_along(description$other_citations)) {
   message(description$other_citations[[i]])
 }
 ```
@@ -286,30 +307,36 @@ for(i in seq_along(description$other_citations)){
 See `??mvgam_families` for more information. Below is a simple example for simulating and modelling proportional data with `Beta` observations over a set of seasonal series with independent Gaussian Process dynamic trends:
 ```{r beta_sim, message=FALSE, warning=FALSE, fig.width=6.5, fig.height=6.5, dpi=160}
 set.seed(100)
-data <- sim_mvgam(family = betar(),
-                  T = 80,
-                  trend_model = GP(),
-                  prop_trend = 0.5, 
-                  seasonality = 'shared')
-plot_mvgam_series(data = data$data_train, series = 'all')
+data <- sim_mvgam(
+  family = betar(),
+  T = 80,
+  trend_model = GP(),
+  prop_trend = 0.5,
+  seasonality = "shared"
+)
+plot_mvgam_series(data = data$data_train, series = "all")
 ```
 
 ```{r, include=FALSE}
-mod <- mvgam(y ~ s(season, bs = 'cc', k = 7) +
-               s(season, by = series, m = 1, k = 5),
-             trend_model = GP(),
-             data = data$data_train,
-             newdata = data$data_test,
-             family = betar())
+mod <- mvgam(
+  y ~ s(season, bs = "cc", k = 7) +
+    s(season, by = series, m = 1, k = 5),
+  trend_model = GP(),
+  data = data$data_train,
+  newdata = data$data_test,
+  family = betar()
+)
 ```
 
 ```{r, eval=FALSE}
-mod <- mvgam(y ~ s(season, bs = 'cc', k = 7) +
-               s(season, by = series, m = 1, k = 5),
-             trend_model = GP(),
-             data = data$data_train,
-             newdata = data$data_test,
-             family = betar())
+mod <- mvgam(
+  y ~ s(season, bs = "cc", k = 7) +
+    s(season, by = series, m = 1, k = 5),
+  trend_model = GP(),
+  data = data$data_train,
+  newdata = data$data_test,
+  family = betar()
+)
 ```
 
 Inspect the summary to see that the posterior now also contains estimates for the `Beta` precision parameters $\phi$. We can suppress a summary of the $\beta$ coefficients, which is useful when there are many spline coefficients to report:
@@ -322,9 +349,9 @@ Plot the hindcast and forecast distributions for each series
 library(patchwork)
 fc <- forecast(mod)
 wrap_plots(
-  plot(fc, series = 1), 
-  plot(fc, series = 2), 
-  plot(fc, series = 3), 
+  plot(fc, series = 1),
+  plot(fc, series = 2),
+  plot(fc, series = 3),
   ncol = 2
 )
 ```
@@ -333,9 +360,9 @@ wrap_plots(
 library(patchwork)
 fc <- forecast(mod)
 wrap_plots(
-  plot(fc, series = 1), 
-  plot(fc, series = 2), 
-  plot(fc, series = 3), 
+  plot(fc, series = 1),
+  plot(fc, series = 2),
+  plot(fc, series = 3),
   ncol = 2
 )
 ```
